# code_mapper

./: .gitignore  .gitmodules  README.MD  alembic.ini  alembic_prod.ini  pyproject.toml
db_model/: env.py
db_model/versions/: 21a8e2c845ad_add_important_views.py  e8486fdb2ec7_initial_database_schema.py
examples/: ArquivosFaturamentoDAO.java  FaturaDAO.java  r102_objects.csv  string_builder.java
output/: token_java.csv
scripts/: bulk_upsert_conf.yaml  model.py  upsert_csv.py
src/code_mapper/: analyze_code.py  java_code_parser.py  java_code_parser_ex.py  java_code_parser_metadata.py  main.py  parsetab.py  string_builder_ext.py  string_builder_ext_antlr.py  string_ext_antlr.py  string_ext_javalang.py  test_enum.py  ts_tester.py
src/code_mapper/antlr/: JavaParser.py  JavaParserListener.py  PlSqlLexer.py  PlSqlParserListener.py
src/code_mapper/old_code/: extract_table_dir.py  extract_table_jdbc_regex.py  extract_table_simple.py  extract_table_ts.py  process_java.py  source_code_metadata.py
src/db_obj_list/: db_code_map.py  db_object_map.py  db_object_read.py  db_object_references.py  metadata.py  reg_test.py  table_references.py
src/gen_c4/: main.py  models.py
src/gen_c4/queries/: domain.sql
src/gen_c4/templates/: workspace.jinja2
treesitter_queries/: entity_query.tsq  extract_multiline_strings.tsq  get_strings_from_java.tsq  repository_query.tsq  tree.ts
