[tool.poetry]
name = "code-mapper"
version = "0.1.0"
description = ""
authors = ["branquif <branquif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
antlr4-python3-runtime = "^4"
tree-sitter = "^0"
setuptools = "^68.2.2"
sqlparse = "^0.4.4"
plyj = "^0.1"
tatsu = "^5.9.2"
antlr4-tools = "^0.2"
jinja2 = "^3.1.2"
sqlalchemy = "^2"
alembic = "^1.12.1"asqlacodegen = {git = "https://github.com/agronholm/sqlacodegen.git"}
pyyaml = "^6.0.1"
pydantic = "^2.5.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
